--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,13 @@ body {
 h3 {
     color: rgb(37, 137, 150);
 }
+
+footer {
+    position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(4, 43, 78);
+  color: white;
+  text-align: center;
+}
