--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,26 @@ figcaption {
     text-align: center
 }
 
-a:link {
-    color: black;
-}
-
-a:hover {
+a {
     color: blue;
 }
 
+a:hover {
+    color: blueviolet;
+}
+
 a:active {
+    color: red;
+}
+
+.fab {
+    color: black;
+}
+
+.fab:hover {
+    color: blue;
+}
+
+.fab:active {
     color: red;
 }
